--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,10 @@
       </nav>
     </div>
   </header>
-  <main class="mdl-layout__content" style="padding: 20px;" *ngIf="stocks">
+  <!-- <main class="mdl-layout__content" style="padding: 20px;" *ngIf="stocks">
     <summary [stock]="stocks[0]"></summary>
-   </main>
+   </main> -->
+   <main class="mdl-layout__content" style="padding: 20px;">
+    <dashboard></dashboard>
+    </main>
 </div>
