--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,13 +5,13 @@
       <span class="mdl-layout-title">Stock Tracker</span>
       <div class="mdl-layout-spacer"></div>
       <nav class="mdl-navigation mdl-layout--large-screen-only">
+        <a class="mdl-navigation__link" [routerLink] = "['/']">Dashboard</a>
         <a class="mdl-navigation__link" [routerLink]="['/']">Dashboard</a>
         <a class="mdl-navigation__link" [routerLink]="['/manage']">Manage</a>
        </nav>
     </div>
   </header>
    <main class="mdl-layout__content" style="padding: 20px;">
-    <summary [stock]="stocks[0]"></summary>
     <router-outlet></router-outlet>
     </main>
 </div>
