--- a/src/app/components/summary/summary.component.html
+++ b/src/app/components/summary/summary.component.html
@@ -1,8 +1,5 @@
-<div
-  class="mdl-card stock-card mdl-shadow--2dp"
-  [ngClass]="{ increase: isPositive(), decrease: isNegative() }"
-  style="width: 100%"
->
+<div class="mdl-card stock-card mdl-shadow--2dp" [ngClass]="{ increase: isPositive(), decrease: isNegative() }"
+  style="width: 100%">
   <span>
     <div class="mdl-card__title">
       <h4 style="color: #fff; margin: 0">
@@ -10,7 +7,7 @@
         {{ stock?.lastTradePriceOnly | currency: "USD":"symbol":".2" }}<br />
 
         {{ stock?.change | currency: "USD":"symbol":".2" }} ({{
-          stock?.changeInPercent | percent: ".2"
+        stock?.changeInPercent | percent: ".2"
         }})
       </h4>
     </div>
